--- a/index.html
+++ b/index.html
@@ -1,9 +1,55 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Quiz</title>
+	<title>Hello Mom!</title>
+	<style type="text/css">
+		html, body {
+			width: 100%;
+			height: 100%;
+			margin: 0px;
+			padding: 0px;
+			overflow: hidden;
+		}
+	</style>
 </head>
 <body>
-	Min quiz är här!
+	<script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.8/pixi.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+
+	<script>
+
+		window.castReceiverManager = cast.receiver.CastReceiverManager.getInstance();
+		var customMessageBus = castReceiverManager.getCastMessageBus('urn:x-cast:se.mowday.cast.quiz');
+		customMessageBus.onMessage = function(event) {
+			console.log("Received message", event);
+		};
+		window.castReceiverManager.start();
+
+	</script>
+	<script>
+		var width = window.innerWidth;
+		var height = window.innerHeight;
+
+		var renderer = new PIXI.CanvasRenderer(width, height);
+		document.body.appendChild(renderer.view);
+
+		var stage = new PIXI.Container();
+		var box   = new PIXI.Graphics();
+		box.beginFill(0xFF00FF);
+		box.drawRect(0, 0, 200, 200);
+		stage.addChild(box);
+
+		function animate() {
+			box.rotation += 0.001;
+			box.pivot = new PIXI.Point(100, 100);
+			box.x = width / 2;
+			box.y = height / 2;
+			renderer.render(stage);
+			window.requestAnimationFrame(animate);
+		}
+		animate();
+	</script>
 </body>
 </html>
